Tried to fix the issue with the submit when clicking Back, still not resolved

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -174,9 +174,9 @@
                     </div>                
                     <button class="btn btn-secondary self-center" id="flavours-showform-btn">Novo</button>
                     <form>
-                        <label for="">Portugues</label>
+                        <label for="">Sabor em Portugues</label>
                         <input type="text" name="flavours_PT">
-                        <label for="">Ingles</label>
+                        <label for="">Sabor em Ingles</label>
                         <input type="text" name="flavours_EN">
 
                         <button class="btn-form-insert btn-col-right" id="flavours-add-btn">Adicionar</button> 
@@ -211,9 +211,9 @@
                     </div>             
                     <button class="btn btn-secondary self-center" id="products-showform-btn">Novo</button>
                     <form>
-                        <label for="">Portugues</label>
+                        <label for="">Produto em Portugues</label>
                         <input type="text" name="flavours_PT">
-                        <label for="">Ingles</label>
+                        <label for="">Produto em Ingles</label>
                         <input type="text" name="flavours_EN">
                         <label for="flavourList">Sabores</label>
                         <select name="flavour" id="flavourList">
