Admin is now able to add multiple flavours when adding or editing the product.

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -216,11 +216,14 @@
                         <label for="">Produto em Ingles</label>
                         <input type="text" name="flavours_EN">
                         <label for="flavourList">Sabores</label>
-                        <select name="flavour" id="flavourList">
+                        <select name="flavour_1">
                             <option selected disabled>Selecione um sabor</option>
                             <option value="1">Nutella</option>
                             <option value="2">Chocolate</option>
                         </select>
+                        <a class="add-new-flavour" style="width: fit-content; background-color: transparent; border: none; outline: none; color: #6495ed">Adicionar novo ?</a>
+
+
                         <button class="btn-form-insert btn-col-right" id="product-add-btn">Adicionar</button> 
                     </form>
                 </div>
