--- a/src/login.html
+++ b/src/login.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard - Bom Ao Quadrado</title>
+    <title>Login - Bom&sup2;</title>
 </head>
 <body>
     <div class="page-wrapper">
-        <div class="login" style="display: none"></div>
+        <img class="self-center" src="assets/img/logo.png" alt="Imagem do administractor" srcset="">
+        <form action="./dashboard.html" class="login-form">
+            <label for="">Email</label>
+            <input type="text" name="adminEmail">
+            <label for="adminPassword">Password</label>
+            <input type="password" name="adminPassword">
+
+            <button type="submit" class="btn btn-primary">Entrar</button>
+        </form>
     </div>
 </body>
 </html>
