Fixed some layout issues based on different resolutions

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -74,9 +74,9 @@
                     <button class="show-settings btn-auto btn-primary">
                         <img src="assets/img/settings.svg" alt="" srcset="">
                     </button>
-                    <button class="btn-auto btn-primary">
+                    <a href="./login.html" class="btn-auto btn-primary">
                         <img src="assets/img/logout.svg" alt="" srcset="">
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="user-name columns-2-of-4">
