--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,7 @@
             </div>
         </section>
         <section class="section parallax bg4">
+            
         </section>
         <!-- #bomaoquadrado -->
         <section class="section static card-background-dark" id="hashtag">
@@ -282,8 +283,8 @@
         <footer class="section static footer">
             <div class="social-media-wrapper">
                 <a href="#" class="fab fa-twitter-square"></a>
-                <a href="https://www.facebook.com/bomaoquadrado/" class="fab fa-facebook-square"></a>
-                <a href="https://www.instagram.com/bomaoquadrado/" class="fab fa-instagram"></a>
+                <a href="https://www.facebook.com/bomaoquadrado/" class="fab fa-facebook-square" target="_blank"></a>
+                <a href="https://www.instagram.com/bomaoquadrado/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="contact-information">
                 <div>
@@ -295,7 +296,7 @@
             </div>
             <div class="footer-surplus">
                 <div>&copy; Bom<sup>2</sup> 2018</div>
-                <div>Desenvolvido por: <a href="https://se.linkedin.com/in/calexandru2018/en">Alexandru Cheltuitor</a></div>
+                <div>Desenvolvido por: <a href="https://se.linkedin.com/in/calexandru2018/en" target="_blank">Alexandru Cheltuitor</a></div>
             </div>
         </footer>
     </main>
