Added instagram content

--- a/src/index.html
+++ b/src/index.html
@@ -225,9 +225,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
                     </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                    </p>
+                    <div id="instafeed"></div>
                 </div>
         </section>
         <section class="section parallax bg4">
