Changed text to show calender

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <div class="road-map-locator">
                     <div id="calendar"></div>
                 </div>
-                <a id="show-locator" href="#" class="btn" style="align-self: end;">À nossa procura ?</a>
+                <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? Clique aqui</a>
             </div>
             <div class="top-stripe"></div>
             <img src="assets/img/logo.png" class="logo-landing-page" alt="">
