Added function to only send email if accepted terms

--- a/src/index.html
+++ b/src/index.html
@@ -257,7 +257,7 @@
                     </p>
                 </div>
                 <div class="contact-form-wrapper">
-                    <div id="error-message" class="hide" style="color: rgb(255, 40, 80);">Todos os campos tem que ser preenchidos!</div>
+                    <div id="error-message" class="hide" style="color: rgb(255, 40, 80);">Todos os campos tem que ser preenchidos, motivo escolhido e aceite os termos.</div>
                     <form id="contact-form" class="contact-form">                   
                         <label for="form-name">Nome</label>
                         <input name="form-name" type="text" class="form-input">
@@ -272,7 +272,13 @@
                         </select>
                         <label for="">Mensagem</label>
                         <textarea name="form-message" class="form-input" cols="30" rows="10"></textarea>
-                        <button type="submit" id="send-btn" class="btn btn-send">Enviar</button>
+                        <div style="display: grid; grid-template-columns: 1fr 1fr;">
+                            <span>
+                                <label for="terms">Li e aceito os termos</label>
+                                <input type="checkbox" name="terms" class="form-input" style="vertical-align: middle; margin: 0 !important">
+                            </span>
+                            <button type="submit" id="send-btn" class="btn btn-send">Enviar</button>
+                        </div>
                     </form>
                 </div>
             </div>
