--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -123,17 +123,17 @@
                     <button class="btn btn-secondary self-center" id="places-showform-btn">Novo</button>  
                     <form>
                         <label for="">Cidade</label>
-                        <input type="text" name="name">
+                        <input type="text" name="name" data-category="place-add-input">
                         <label for="">Desde</label>
-                        <input type="date" name="name">
+                        <input type="date" name="name" data-category="place-add-input">
                         <label for="">Ate</label>
-                        <input type="date" name="name">
+                        <input type="date" name="name" data-category="place-add-input">
                         <label for="">Latitude</label>
-                        <input type="text" name="latitude">
+                        <input type="text" name="latitude" data-category="place-add-input">
                         <label for="">Longitude</label>
-                        <input type="text" name="longitude">
+                        <input type="text" name="longitude" data-category="place-add-input">
 
-                        <button class="btn-form-insert btn-col-right" id="places-add-btn">Adicionar</button> 
+                        <button class="btn-form-insert btn-col-right" id="place-add-btn">Adicionar</button> 
                     </form>
                 </div>                         
             </div>
@@ -175,9 +175,9 @@
                     <button class="btn btn-secondary self-center" id="flavours-showform-btn">Novo</button>
                     <form>
                         <label for="">Sabor em Portugues</label>
-                        <input type="text" name="flavours_PT">
+                        <input type="text" name="flavours_PT" data-category="flavours-add-input">
                         <label for="">Sabor em Ingles</label>
-                        <input type="text" name="flavours_EN">
+                        <input type="text" name="flavours_EN" data-category="flavours-add-input">
 
                         <button class="btn-form-insert btn-col-right" id="flavours-add-btn">Adicionar</button> 
                     </form>
@@ -209,14 +209,14 @@
                             </a>
                         </span>
                     </div>             
-                    <button class="btn btn-secondary self-center" id="products-showform-btn">Novo</button>
+                    <button class="btn btn-secondary self-center" id="product-showform-btn">Novo</button>
                     <form>
                         <label for="">Produto em Portugues</label>
-                        <input type="text" name="flavours_PT">
+                        <input type="text" name="product_PT" data-category="product-add-input">
                         <label for="">Produto em Ingles</label>
-                        <input type="text" name="flavours_EN">
+                        <input type="text" name="product_EN" data-category="product-add-input">
                         <label for="flavourList">Sabores</label>
-                        <select name="flavour_1">
+                        <select name="flavour_1" data-category="product-add-input_1">
                             <option selected disabled>Selecione um sabor</option>
                             <option value="1">Nutella</option>
                             <option value="2">Chocolate</option>
