--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -12,15 +12,15 @@
             <button class="btn btn-primary self-center" id="show-admin-list">Adicionar Administrador</button>
             <form class="admin-add-new">
                 <label for="email">E-mail*</label>
-                <input type="email" name="email">
+                <input type="email" name="email" data-category="admin-add-input">
                 <label for="password">Palavra Passe*</label>
-                <input type="passwird" name="pwd">
+                <input type="passwird" name="pwd" data-category="admin-add-input">
                 <label for="name">Nome*</label>
-                <input type="text" name="name">
+                <input type="text" name="name" data-category="admin-add-input">
                 <label for="phoneNumber">Telefone</label>
-                <input type="tel" name="phoneNumber">
+                <input type="tel" name="phoneNumber" data-category="admin-add-input">
 
-                <button class="btn-form-insert" id="admin-add-btn">Adicionar</button> 
+                <button class="btn-form-insert" id="admin-add-input">Adicionar</button> 
             </form>
             <button class="btn btn-primary self-center" id="show-admin-list">Gerir Administradores</button>
             <div class="admin-list table-col-3">
@@ -51,13 +51,13 @@
             <button class="btn btn-primary self-center" id="show-admin-list">Alterar Password</button>
             <form class="change-password-form" style="display: none">
                 <label for="email">Passe Actual</label>
-                <input type="password" name="actualPassword">
+                <input type="password" name="actualPassword" data-category="admin-edit-password">
                 <label for="name">Nova Passe*</label>
-                <input type="passwrod" name="newPassword">
+                <input type="passwrod" name="newPassword" data-category="admin-edit-password">
                 <label for="name">Repita Passe*</label>
-                <input type="passwrod" name="rePassword">
+                <input type="passwrod" name="rePassword" data-category="admin-edit-password">
 
-                <button class="btn-form-insert" id="admin-change-pwd-btn">Adicionar</button> 
+                <button class="btn-form-insert" id="admin-edit-password">Adicionar</button> 
             </form>
             <button class="show-settings btn-auto btn-primary self-center">
                 Voltar
@@ -133,7 +133,7 @@
                         <label for="">Longitude</label>
                         <input type="text" name="longitude" data-category="place-add-input">
 
-                        <button class="btn-form-insert btn-col-right" id="place-add-btn">Adicionar</button> 
+                        <button class="btn-form-insert btn-col-right" id="place-add-input">Adicionar</button> 
                     </form>
                 </div>                         
             </div>
@@ -179,7 +179,7 @@
                         <label for="">Sabor em Ingles</label>
                         <input type="text" name="flavours_EN" data-category="flavours-add-input">
 
-                        <button class="btn-form-insert btn-col-right" id="flavours-add-btn">Adicionar</button> 
+                        <button class="btn-form-insert btn-col-right" id="flavours-add-input">Adicionar</button> 
                     </form>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                         <a class="add-new-flavour" style="width: fit-content; background-color: transparent; border: none; outline: none; color: #6495ed">Adicionar novo ?</a>
 
 
-                        <button class="btn-form-insert btn-col-right" id="product-add-btn">Adicionar</button> 
+                        <button class="btn-form-insert btn-col-right" id="product-add-input">Adicionar</button> 
                     </form>
                 </div>
             </div>
