All data is collected when trying to edit on a non-dynamic created element. Further work is required to handle the collection of data within dynamically created elements.

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -125,9 +125,9 @@
                         <label for="">Cidade</label>
                         <input type="text" name="name" data-category="place-add-input">
                         <label for="">Desde</label>
-                        <input type="date" name="name" data-category="place-add-input">
+                        <input type="date" name="startDate" data-category="place-add-input">
                         <label for="">Ate</label>
-                        <input type="date" name="name" data-category="place-add-input">
+                        <input type="date" name="endDate" data-category="place-add-input">
                         <label for="">Latitude</label>
                         <input type="text" name="latitude" data-category="place-add-input">
                         <label for="">Longitude</label>
@@ -224,7 +224,7 @@
                         <a class="add-new-flavour" style="width: fit-content; background-color: transparent; border: none; outline: none; color: #6495ed">Adicionar novo ?</a>
 
 
-                        <button class="btn-form-insert btn-col-right" id="product-add-input">Adicionar</button> 
+                        <button type="submit" class="btn-form-insert btn-col-right" id="product-add-input">Adicionar</button> 
                     </form>
                 </div>
             </div>
