Edit buttons wokring, everything corresponds to the correct button, functions needed.

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -20,7 +20,7 @@
                 <label for="phoneNumber">Telefone</label>
                 <input type="tel" name="phoneNumber" data-category="admin-add-input">
 
-                <button class="btn-form-insert" id="admin-add-input">Adicionar</button> 
+                <button class="btn-form-insert add-data" id="admin-add-input">Adicionar</button> 
             </form>
             <button class="btn btn-primary self-center" id="show-admin-list">Gerir Administradores</button>
             <div class="admin-list table-col-3">
@@ -57,7 +57,7 @@
                 <label for="name">Repita Passe*</label>
                 <input type="passwrod" name="rePassword" data-category="admin-edit-password">
 
-                <button class="btn-form-insert" id="admin-edit-password">Adicionar</button> 
+                <button class="btn-form-insert add-data" id="admin-edit-password">Adicionar</button> 
             </form>
             <button class="show-settings btn-auto btn-primary self-center">
                 Voltar
@@ -133,7 +133,7 @@
                         <label for="">Longitude</label>
                         <input type="text" name="longitude" data-category="place-add-input">
 
-                        <button class="btn-form-insert btn-col-right" id="place-add-input">Adicionar</button> 
+                        <button class="btn-form-insert add-data btn-col-right" id="place-add-input">Adicionar</button> 
                     </form>
                 </div>                         
             </div>
@@ -179,7 +179,7 @@
                         <label for="">Sabor em Ingles</label>
                         <input type="text" name="flavours_EN" data-category="flavours-add-input">
 
-                        <button class="btn-form-insert btn-col-right" id="flavours-add-input">Adicionar</button> 
+                        <button class="btn-form-insert add-data btn-col-right" id="flavours-add-input">Adicionar</button> 
                     </form>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                         <a class="add-new-flavour" style="width: fit-content; background-color: transparent; border: none; outline: none; color: #6495ed">Adicionar novo ?</a>
 
 
-                        <button type="submit" class="btn-form-insert btn-col-right" id="product-add-input">Adicionar</button> 
+                        <button type="submit" class="btn-form-insert add-data btn-col-right" id="product-add-input">Adicionar</button> 
                     </form>
                 </div>
             </div>
