ID of the item is now passed when pressing on Edit button

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -33,7 +33,7 @@
                     <a class="edit-admin" data-type="admin" data-admin-id="1">
                         <img src="assets/img/edit.svg"" alt="" srcset="">
                     </a>
-                    <a class="delete-admin" data-type="admin" data-admin-id="1">
+                    <a class="delete-data delete-admin" data-type="admin" data-admin-id="1">
                         <img src="assets/img/remove.svg"" alt="" srcset="">
                     </a>
                 </span>
@@ -43,7 +43,7 @@
                         <a class="edit-admin" data-type="admin" data-admin-id="2">
                             <img src="assets/img/edit.svg"" alt="" srcset="">
                         </a>
-                        <a class="delete-admin" data-type="admin" data-admin-id="2">
+                        <a class="delete-data delete-admin" data-type="admin" data-admin-id="2">
                             <img src="assets/img/remove.svg"" alt="" srcset="">
                         </a>
                     </span>
@@ -102,7 +102,7 @@
                             <a class="edit-place" data-type="place" data-place-id="1">
                                 <img src="assets/img/edit.svg"" alt="" srcset="">
                             </a>
-                            <a class="delete-place" data-type="place" data-place-id="1">
+                            <a class="delete-data delete-place" data-type="place" data-place-id="1">
                                 <img src="assets/img/remove.svg"" alt="" srcset="">
                             </a>
                         </span>
@@ -115,7 +115,7 @@
                             <a class="edit-place" data-type="place" data-place-id="2">
                                 <img src="assets/img/edit.svg"" alt="" srcset="">
                             </a>
-                            <a class="delete-place" data-type="place" data-place-id="1">
+                            <a class="delete-data delete-place" data-type="place" data-place-id="1">
                                 <img src="assets/img/remove.svg"" alt="" srcset="">
                             </a>
                         </span>
@@ -149,7 +149,7 @@
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="1">
                                     <img src="assets/img/edit.svg"" alt="" srcset="">
                                 </a>
-                                <a class="delete-flavour" data-type="flavour" data-flavour-id="1">
+                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="1">
                                     <img src="assets/img/remove.svg"" alt="" srcset="">
                                 </a>
                             </span>
@@ -158,7 +158,7 @@
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="2">
                                     <img src="assets/img/edit.svg"" alt="" srcset="">
                                 </a>
-                                <a class="delete-flavour" data-type="flavour" data-flavour-id="2">
+                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="2">
                                     <img src="assets/img/remove.svg"" alt="" srcset="">
                                 </a>
                             </span>
@@ -167,7 +167,7 @@
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="3">
                                     <img src="assets/img/edit.svg"" alt="" srcset="">
                                 </a>
-                                <a class="delete-flavour" data-type="flavour" data-flavour-id="3">
+                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="3">
                                     <img src="assets/img/remove.svg"" alt="" srcset="">
                                 </a>
                             </span>
@@ -195,7 +195,7 @@
                             <a class="edit-product" data-type="product" data-product-id="1">
                                 <img src="assets/img/edit.svg"" alt="" srcset="">
                             </a>
-                            <a class="delete-product" data-type="product" data-product-id="1">
+                            <a class="delete-data delete-product" data-type="product" data-product-id="1">
                                 <img src="assets/img/remove.svg"" alt="" srcset="">
                             </a>
                         </span>
@@ -204,7 +204,7 @@
                             <a class="edit-product" data-type="product" data-product-id="2">
                                 <img src="assets/img/edit.svg"" alt="" srcset="">
                             </a>
-                            <a class="delete-product" data-type="product" data-product-id="2">
+                            <a class="delete-data delete-product" data-type="product" data-product-id="2">
                                 <img src="assets/img/remove.svg"" alt="" srcset="">
                             </a>
                         </span>
